grammar.js
		statement_list: $ => repeat1($._statement),

		number: _ => token(seq(
			optional('-'),
			token.immediate(/\d\S*/),
		)),

		// taken from https://github.com/tree-sitter/tree-sitter-c/blob/7175a6dd5fc1cee660dce6fe23f6043d75af424a/grammar.js#L964
		string: $ => seq(
			'"',
			repeat(choice(
				token.immediate(prec(1, /[^"\\]+/)),
				$.escape_sequence,
			)),
			'"'
		),

		_variable: $ => choice(
			$.number,
			$.string,
			$.character,
			$.identifier,
		),

		// based on https://github.com/tree-sitter/tree-sitter-javascript/blob/7a29d06274b7cf87d643212a433d970b73969016/grammar.js#L947
		_statement: $ => choice(
			$._empty_statement,
			$.ignored,

			$.version_statement,
			$.exit_statement,

			$.math_statement,
			$.xmath_statement,

			$.open_statement,
			$.file_xor_statement,
			$.call_dll_statement,

			$.save_pos_statement,
			$.set_statement,

			$.endian_statement,
			$._magic_check_statements,
			$._get_statements,
			$._put_statements,

			$.goto_statement,
			$.if_statement,

			$.call_function_statement,
			$.start_function_statement,

			$.for_statement,
			$.do_statement,
			$.loop_statement,
			$.label_statement,
			$.break_statement,
			$.continue_statement,

			$.print_statement,

			$.append_statement,
			$.log_statement,
			$.clog_statement,
			$.s_log_statement,

			$.c_define_statement,
		),

		_statement_end: $ => seq(
			optional(choice(
				';',
				$.comment,
			)),
			'\n'
		),

		version_statement: $ => seq(
			case_insensitive('quickbmsver'),
			$._variable,
			$._statement_end,
		),

		set_statement: $ => seq(
			case_insensitive('set'),
			field('name', $._variable),
			optional(choice(
				field('op', alias('=', $._variable)),
				field('type', $._variable)
			)),
			field('value', $._variable),
			$._statement_end,
		),
