test/corpus/set_statement.txt
================================================================================
no type
================================================================================

set FULLNAME FOLDER

---

(statement_list
	(set_statement
		name: (variable)
		value: (variable)))

================================================================================
with type
================================================================================

set NAME string "MEMORY_FILE10"

---

(statement_list
	(set_statement
		name: (variable)
		type: (variable)
		value: (variable)))
