test/corpus/version_statement.txt
================================================================================
plain version
================================================================================

quickbmsver 0.4.6

---

(statement_list
 (version_statement
	(number)))

================================================================================
string version
================================================================================

quickbmsver "0.4.6"

---

(statement_list
 (version_statement
	(string)))

================================================================================
string version with parameters
================================================================================

quickbmsver "0.4.6 -b 0x00 -64 -P -9"

---

(statement_list
 (version_statement
	(string)))

================================================================================
just parameters
================================================================================

quickbmsver "-b 0x00 -64 -P -9"

---

(statement_list
 (version_statement
	(string)))
	
